--- a/packages/celer-lib/Cargo.toml
+++ b/packages/celer-lib/Cargo.toml
@@ -13,6 +13,7 @@ crate-type = ["cdylib", "rlib"]
 wasm-bindgen = "=0.2.79"
 serde = { version = "1.0.136", features = ["derive"]}
 serde_json = "1.0"
+base64 = "0.13.0"
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
