--- a/packages/celer-web-app/Justfile
+++ b/packages/celer-web-app/Justfile
@@ -12,7 +12,7 @@ lint:
 lint-fix:
     npm run lint -- --fix
 
-build:
+wasm:
     rm -rf src/data/wasmlib
     @just ../celer-lib/apply
     wget -q -O binaryen.tar.gz https://github.com/WebAssembly/binaryen/releases/download/version_105/binaryen-version_105-x86_64-linux.tar.gz
@@ -20,6 +20,8 @@ build:
     tar -xzvf binaryen.tar.gz -C bin
     mv -f -T src/data/wasmlib/celer_bg.wasm src/data/wasmlib/celer_bg_unoptimized.wasm
     ./bin/binaryen-version_105/bin/wasm-opt src/data/wasmlib/celer_bg_unoptimized.wasm -O3 -o src/data/wasmlib/celer_bg.wasm
+
+build: wasm
     npm run build
 
 watch:
