--- a/packages/celer-lib/Cargo.toml
+++ b/packages/celer-lib/Cargo.toml
@@ -10,7 +10,7 @@ name = "celer"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-wasm-bindgen = "=0.2.79"
+wasm-bindgen = { version = "=0.2.81", features = ["serde-serialize"]}
 serde = { version = "1.0.136", features = ["derive"]}
 serde_json = "1.0"
 base64 = "0.13.0"
