--- a/packages/celer-devtool/Cargo.toml
+++ b/packages/celer-devtool/Cargo.toml
@@ -16,3 +16,4 @@ ctrlc = "3.2.2"
 chrono = "0.4.19"
 clap = { version = "3.2.17", features = ["derive"] }
 panic-message = "0.3.0"
+const_format = "0.2.26"
