--- a/packages/celer-e2e-test/Justfile
+++ b/packages/celer-e2e-test/Justfile
@@ -5,12 +5,19 @@ build:
     @just ../../buildrs --release
 
 test FAILONLY="": build
-    python3 scripts/e2e.py test ../../../../../target/release/celer-devtool {{FAILONLY}}
+    python3 scripts/e2e.py test ../../target/release/celer-devtool {{FAILONLY}}
 
 run-test TEST: build
-    python3 scripts/e2e.py test ../../../../../target/release/celer-devtool -t {{TEST}}
+    python3 scripts/e2e.py test ../../target/release/celer-devtool -t {{TEST}}
+
+run-config TEST CONFIG: build
+    python3 scripts/e2e.py test ../../target/release/celer-devtool -t {{TEST}} -c {{CONFIG}}
 
 clean:
     python3 scripts/e2e.py clean
 
+clean-test TEST:
+    python3 scripts/e2e.py clean -t {{TEST}}
+
 alias r:=run-test
+alias c:=run-config
